# drop2s3-oracle

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.cargo/: config.toml
.claude/skills/rust-best-practices/: SKILL.md
.claude/skills/rust-cli/: SKILL.md
.claude/skills/rust-macros/: SKILL.md
.claude/skills/rust-performance/: SKILL.md
.claude/skills/rust-testing/: SKILL.md
.claude/skills/rust-unsafe-ffi/: SKILL.md
.github/: release.yml
.github/workflows/: CLAUDE.md  ci.yml
.xwin-cache/dl/: Win11SDK_10.0.26100_headers.msi  Win11SDK_10.0.26100_libs_x86_64.msi  Win11SDK_10.0.26100_store_headers.msi  Win11SDK_10.0.26100_store_headers_onecoreuap.msi  Win11SDK_10.0.26100_store_libs.msi  Win11SDK_10.0.26100_uap_headers.msi  Win11SDK_10.0.26100_x64_headers.msi  manifest_17.json
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Desktop.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Desktop.base.vsix/lib/x64/: libompd.lib  libvcruntimed.lib
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Store.base.vsix/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers_onecoreuap.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/lib/um/arm64/: DhcpCSvc6.Lib  DnsAPI.Lib  OneCoreUAP_downlevel.Lib  OneCore_apiset.Lib  OneCore_downlevel.Lib  PortableDeviceGuids.lib  User32.Lib  WS2_32.Lib  WinTrust.Lib  WindowsApp.lib  WindowsApp_downlevel.lib  dloadhelper.lib  dxguid.lib  mbnapi_uuid.lib  mfuuid.lib  msxml6.lib  ntdll.lib  strsafe.lib  volatileaccessu.lib  webauthn.lib  windows.ai.machinelearning.lib  windowscodecs.lib  winsqlite3.lib  xapobase.lib  xapobase2_8.lib
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/lib/um/x86/: DhcpCSvc6.Lib  DnsAPI.Lib  OneCore.Lib  OneCoreUAP.Lib  OneCoreUAP_apiset.Lib  OneCoreUAP_downlevel.Lib  OneCore_apiset.Lib  OneCore_downlevel.Lib  PortableDeviceGuids.lib  User32.Lib  WS2_32.Lib  WinTrust.Lib  WindowsApp.lib  WindowsApp_downlevel.lib  dloadhelper.lib  dxguid.lib  mbnapi_uuid.lib  mfuuid.lib  msxml6.lib  strsafe.lib  volatileaccessu.lib  webauthn.lib  windowscodecs.lib  windowscoreheadless.Lib  windowscoreheadless_apiset.Lib  winsqlite3.lib  xapobase.lib  xapobase2_8.lib
.xwin-cache/unpack/Win11SDK_10.0.26100_uap_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_x64_headers.msi/: tree.txt
.xwin-cache/unpack/ucrt.msi/: tree.txt
src/: CLAUDE.md  config.rs  crypto.rs  dpapi_crypto.rs  embedded_icons.rs  history.rs  logging.rs  main.rs  portable_crypto.rs  shutdown_handler.rs  single_instance.rs  startup.rs  tray.rs  ui.rs  update.rs  upload.rs  utils.rs
