[package]
name = "drop2s3"
version = "1.0.1"
edition = "2021"
authors = ["AI Assistant <ai@tl-systems.pl>"]
description = "Minimalist Windows tray app for uploading files to Oracle Cloud Object Storage"
license = "MIT"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.33"

tray-icon = "0.21"

tokio = { version = "1", features = ["rt-multi-thread", "fs", "time", "sync", "macros"] }
tokio-util = "0.7"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
directories = "6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

windows = { version = "0.62", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"

reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls", "fail-on-err"] }

arboard = "3"

image = { version = "0.25", default-features = false, features = ["ico", "png"] }

zeroize = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.9"

anyhow = "1"
thiserror = "2"

mime_guess = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
